# TKT_Framework

./: .editorconfig  .gitignore  .precommit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  Readme.md  install.py  lint.yml  pyproject.toml  requirements.txt  settings.config
.github/workflows/: lint.yml  unit-tests.yml
TKT/: __init__.py  __main__.py  cli.py  distro_configs.py  fetch.py  kernel_config.py  safe.py  settings.config  settings.toml
docs/:  Contributing .md  API Documentation.md  DEVELOPER_GUIDE.md  TKT Developer Guide.md
tests/: distros.json  releases.json  test_choose_backend.py  test_distribution_name.py  test_distro_configs.py  test_fetch.py  test_kernel_config.py  test_kernel_toolkit_app.py  test_load_library.py  test_main_function.py  test_safe.py  test_textual_app_integration.py  test_tkt_system_manager.py
