[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
    "tests/",
    "Makefile",
    "requirements.txt",
    ".?*",
]
packages = ["TKT"]

[tool.black]
line-length = 88
target-version = ["py311"]
skip-string-normalization = false

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py311"
fix = true
include = ["pyproject.toml", "TKT/**/*.py"]

[tool.ruff.lint]
select = ["E", "F", "I"]  # errors, formatting, imports
ignore = ["E501", "F841"]

[tool.coverage.run]
omit = [
    "__init__.py",
    "__main__.py",
]

[tool.coverage.report]
exclude_also = [
    'if __name__ == "__main__"',
]

[project]
name = "the-kernel-toolkit"
version = "0.1.0"
description = "Developmental repo for the TKT-Framework"
readme = "README.md"
license = "GPL-2.0-only"
requires-python = ">=3.11"
classifiers = [
    "Environment :: Console",
    "Environment :: Console :: Curses",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Operating System Kernels",
    "Topic :: System :: Operating System Kernels :: Linux",
]
dependencies = [
    "textual==6.1.0",
    "tomlkit>=0.12.0",
    "requests==2.32.5",
]

[project.scripts]
tkt = "TKT.cli:main"
